 - Added /GUI APPLY command, which does that same as pressing OK in the
   settings window (e.g use it after /set). Mainly for scripters.
 - Allow changing the logging folder if the log filename is set to a full path
   in the settings window (starts with a '/').
 - Added 'Your Action' text event.
 - Separated out /away and /back commands so it's obvious what they'll do.
 - Extended the /MENU command to work for popup menus too. See plugin20.html
   for details.
 - Plugin API:
  * Added event_text to xchat_get_info().
 - Perl (Lian Wan Situ)
  * Fixed hook_command so that it won't override the help message for builtin
    commands unless a help message was specified.
  * Perl Win32: Warn the user about trying to load 64-bit ActivePerl.


------------------------------------------------------------------------------
 2.6.8 - 16/Oct/2006
------------------------------------------------------------------------------

 - Updated translations (be, de, el, es, fi, hu, it, ja, lt, pt, ru, sv, vi).
 - Removed "xchat-remote" and "dbus.so", it's now apart of the "xchat" binary.
   There is now a new dbus interface, see src/common/dbus/README for details.
   (Claessens Xavier).
 - Python: Fixed "restricted mode" errors on win32 [1512076].
 - Special-cased BRASnet for nickserv.
 - Fixed using the /MENU args -p and -e at the same time.
 - Fixed /reconnect and auto-reconnect issue [1525383].
 - Plugin API:
   * Added fields: lag, queue to the "channels" list.
   * Added fields: sizehigh to the "dcc" list.
   * Added fields: networks to the "notify" list.
   * Handle gracefully plugins that try to execute commands with invalid UTF-8.
   * Added /GETFILE command, to open a file dialog.
   * Command hooks that start with a period ('.') will now be hidden from /HELP
     and /HELP -l.
 - Fixed: [1544960] quitting via tabs behaves bad on bncs.
 - Fixed: [1551620] --version flag needs display.
 - Fixed: [1539236] problem with the /url command (irc:// handling).