@@ -35,8 +35,10 @@ highlights. The full CVS log is available at www.xchat.org/cvslog/
    in the settings window (starts with a '/').
  - Added 'Your Action' text event.
  - Separated out /away and /back commands so it's obvious what they'll do.
- - Extended the /MENU command to work for popup menus too. See plugin20.html
-   for details.
+ - Changes to /MENU command (See plugin20.html for details):
+  * Now works for popup menus too.
+  * Allows creation of radio menu items.
+  * -p arg can now to be negative to give a position offset from right/bottom.
  - Plugin API:
   * Added event_text to xchat_get_info().
  - Perl (Lian Wan Situ)
